_sass/base.scss
$bg-color: #1e1e1e;
$header-bg: #252526;
$text-color: #f0e68c;
$accent-color: #ffd700;
$border-color: #ffd700;
$code-bg: #121212;
$link-color: #ffd700;
$hover-color: #ffffff;

body {
  font-family: 'Fira Code', monospace;
  font-size: larger;
  line-height: 1.55;
  background-color: $bg-color;
  text-align: justify;
  color: $text-color;
  margin: 0;
  padding: 0;
  font-feature-settings: "liga" 0;
}

.container {
  max-width: 1000px;
  margin: 0 auto;
  padding: 20px;
}

.centered {
  text-align: center;
  animation: colorCycle 1s ease-in-out infinite;
}

.centered2 {
  text-align: center;
  color: $hover-color;
}

@keyframes colorCycle {

  0%,
  100% {
    color: #ffffff;
  }

  33% {
    color: #ffd700;
  }

  66% {
    color: #00ff41;
  }
}

.check {
  font-family: 'Inconsolata', monospace;
  font-size: x-large;
  color: $hover-color;
}

header {
  background-color: $header-bg;
  padding: 15px;
  border-bottom: 2px solid $border-color;
  display: flex;
  justify-content: space-between;
  align-items: center;
}


header h1 {
  font-size: 1.5em;
  color: $accent-color;
}

header h1:hover {
  text-shadow: 0 0 5px $accent-color, 0 0 20px $accent-color;
}

.caret {
  display: inline;
  color: $accent-color;
  font-weight: bold;
  animation: blink 1s infinite;
}

.caret::after {
  content: "_";
}

@keyframes blink {

  0%,
  50% {
    opacity: 1;
  }

  50.01%,
  100% {
    opacity: 0;
  }
}

nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
}

nav li {
  margin-right: 20px;
}

nav a {
  color: $text-color;
  text-decoration: none;
  font-size: 1.2em;
}

nav a:hover {
  color: $hover-color;
  text-decoration: underline;
  text-underline-offset: 0.4em;
  background-color: #000000;
}

nav a.active {
  color: $hover-color;
  text-decoration: underline;
  text-underline-offset: 0.4em;
  font-weight: bold;
}


footer {
  background-color: $header-bg;
  padding: 15px;
  border-top: 2px solid $border-color;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

footer p {
  font-size: 1em;
  color: $text-color;
  margin: 0;
}

footer ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  gap: 20px;

}

footer li {
  margin: 0;
}

footer a {
  color: $accent-color;
  text-decoration: none;
  font-size: 1em;
}

footer a:hover {
  color: $hover-color;
  text-decoration: underline;
  text-underline-offset: 0.4em;
  background-color: #000000;
}

footer a.icon-link {
  color: $accent-color;
  text-decoration: none;
}

footer a.icon-link:hover {
  color: $hover-color;
  text-decoration: none;
  background-color: transparent;
  transition: all 0.2s ease;
}

.pagination {
  display: flex;
  justify-content: center;
  margin-top: 20px;
}

.pagination a {
  margin: 0 5px;
  padding: 5px 10px;
  font-weight: bold;
  background-color: #000000;
  color: $link-color;
  border-radius: 3px;
  font-family: 'Courier New', Courier, monospace;
}

.pagination a:hover {
  font-weight: bolder;
  color: $hover-color;
  text-decoration: underline;
}

.pagination em {
  margin: 0 5px;
  padding: 5px 10px;
  border-radius: 3px;
  font-family: 'Courier New', Courier, monospace;
  background-color: $accent-color;
  color: #000000;
  font-weight: bolder;
  font-style: normal;
  border: 2px solid $accent-color;
}

.pagination .previous,
.pagination .next {
  font-weight: bold;
  color: $link-color;
  transition: color 1s, background-color 1s, underline 1s;
}

.pagination .previous:hover,
.pagination .next:hover {
  background-color: $link-color;
  text-decoration: underline;
  color: #000000;
}

code {
  background-color: $code-bg;
  color: $accent-color;
  padding: 2px 4px;
  border-radius: 3px;
  font-family: 'Courier New', Courier, monospace;
}

.highlight {
  background-color: $code-bg;
  border-radius: 10px;
  padding: 16px;
  overflow: auto;
}

.highlight pre {
  margin: 0;
  padding: 0;
  background: none;
  border: 0;
}

.highlight code {
  background: none;
  border: 0;
  padding: 0;
  color: #abb2bf;
  font-weight: bold;
}

.highlight .highlight {
  background-color: #282c34;
  border-radius: 3px;
}

.highlight .c {
  color: #7f8c98;
  font-weight: bold;
}

.highlight .err {
  color: #ff6b6b;
  background-color: #3e4451;
  font-weight: bold;
}

.highlight .k,
.highlight .o,
.highlight .kc,
.highlight .kd,
.highlight .kp,
.highlight .kn,
.highlight .kr,
.highlight .kt,
.highlight .ow {
  color: #d284f2;
  font-weight: bold;
}

.highlight .cm,
.highlight .c1 {
  color: #7f8c98;
  font-weight: bold;
}

.highlight .cp,
.highlight .cs,
.highlight .gh,
.highlight .se {
  color: #79b8ff;
  font-weight: bold;
}

.highlight .gd,
.highlight .gr,
.highlight .gt,
.highlight .nt {
  color: #ff6b6b;
  background-color: #3e4451;
  font-weight: bold;
}

.highlight .gi {
  color: #a6e22e;
  background-color: #3e4451;
  font-weight: bold;
}

.highlight .ge {
  font-style: italic;
}

.highlight .m,
.highlight .mf,
.highlight .mh,
.highlight .mi,
.highlight .mo,
.highlight .il {
  color: #e5a07b;
  font-weight: bold;
}

.highlight .s,
.highlight .sb,
.highlight .sc,
.highlight .sd,
.highlight .s2,
.highlight .sh,
.highlight .si,
.highlight .sx,
.highlight .sr,
.highlight .s1,
.highlight .ss {
  color: #b6e292;
  font-weight: bold;
}

.highlight .na,
.highlight .nc,
.highlight .no,
.highlight .ne,
.highlight .nf,
.highlight .nn,
.highlight .nv,
.highlight .bp,
.highlight .vc,
.highlight .vg,
.highlight .vi,
.highlight .vm {
  color: #ffd700;
  font-weight: bold;
}

.highlight .w {
  color: #ffffff;
  font-weight: bold;
}


h1 {
  color: $accent-color;
}

h2 {
  color: $accent-color;
}

h3 {
  color: $accent-color;
}

h4 {
  color: $accent-color;
}

h5 {
  color: $accent-color;
}

a {
  color: $link-color;
  text-decoration: none;
  transition: background-color 1s, color 1s, text-decoration 1s;
}

a:hover {
  color: $hover-color;
  text-decoration-line: underline;
  background-color: #000000;
}

.pageheader {
  font-size: larger;
}

img {
  display: block;
  max-width: 70%;
  height: auto;
  margin: 0 auto;
  border: 1px solid $accent-color;
}

